<resources>
    <string name="app_name">ScrollVIew</string>
    <string name="enter_name_hint">Enter Name</string>
    <string name="enter_the_id_hint">Enter the ID</string>
    <string name="enter_date_of_birth_hint">Enter Date of Birth</string>
    <string name="enter_blood_group">Enter Blood Group</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_district">enter District</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_pin_code">Enter Pin code</string>
</resources>